# gbif-downloader

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: release.yml  test.yml
entomology_labels/: __init__.py  cli.py  gui.py  label_generator.py
entomology_labels/input_handlers/: __init__.py
entomology_labels/output_generators/: __init__.py
examples/: example_labels.csv  example_labels.json  example_labels.txt
gbif_downloader/: __init__.py  api.py  cli.py  config.py  filters.py  gui.py  utils.py
gbif_downloader/exporters/: __init__.py  csv.py  excel.py  geojson.py
tests/: __init__.py  test_api.py  test_filters.py  test_label_generator.py
